Allow package exclusions and inclusions in javadocs (#1293)